--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="container">
   <div class="content"> 
-    <video id="video" style="width:100%; height:100%;" class="mejs__player">
+    <video id="video" style="width:100%; height:100%;" class="mejs__player" poster="assets/img/internet.jpg">
       <source type"video/mp4" src="assets/video/video.mp4">
       <source type"video/mp4" src="assets/video/video.ogg">
   </video>
@@ -49,7 +49,7 @@
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous">  
  </script>
- <script type="text/javascript" src="js/mediaelement-and-player.js"></script>
+ <script type="text/javascript" src="js/mediaelement-and-player.min.js"></script>
  <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
